# HuffmanCoding

./: CMakeLists.txt  Decoding.h  FileRW.h  README.md  Types.h  huffman.h  main.c
Process/: Encoder.c  Encoder.h  FileRW.h  Input.c  Input.h  Types.h  encoder.c  encoder.h  input.c  input.h  output.c  output.h  types.h
process/: encoder.h  input.c  input.h  types.h
